#pragma once
#include <string>

enum class ItemType {
	ATTACK,
	HEAL,
	MERCY
};
