@startuml ALTERDUNE

' ─── Enums ───────────────────────────────────────────────────────────────────

enum ItemType {
    ATTACK
    HEAL
    MERCY
}

enum FightResult {
    KILLED
    SPARED
}

' ─── Entity hierarchy ────────────────────────────────────────────────────────

class Entity {
    # hp : int
    # hpMax : int
    --
    + Entity(hp: int, hpMax: int)
    + takeDamage(dmg: int) : void
    + heal(amount: int) : void
    + isAlive() : bool
    + getHp() : int
    + getHpMax() : int
}

class Player {
    - name : string
    - inventory : vector<Item>
    --
    + Player(hp: int, hpMax: int, name: string)
    + fight(m: Monster&) : void
    + useItem(index: int, m: Monster&) : void
    + mercy(m: Monster&) : bool
    + getName() : string
    + getInventory() : vector<Item>&
}

abstract class Monster {
    # name : string
    # atk : int
    # def : int
    # mercy : int
    # mercy_obj : int
    # actIds : vector<string>
    --
    + Monster(hp: int, hpMax: int, name: string, atk: int, def: int, mercy_obj: int)
    + {abstract} nbActs() : int
    + {abstract} getCategory() : string
    + attack(p: Player&) : void
    + canBeSpared() : bool
    + getName() : string
    + getAtk() : int
    + getDef() : int
    + getMercy() : int
    + getMercyObj() : int
    + addMercy(amount: int) : void
    + getActIds() : vector<string>&
}

class NormalMonster {
    + NormalMonster(hp, hpMax, name, atk, def, mercy_obj)
    + nbActs() : int
    + getCategory() : string
}

class MiniBossMonster {
    + MiniBossMonster(hp, hpMax, name, atk, def, mercy_obj)
    + nbActs() : int
    + getCategory() : string
}

class BossMonster {
    + BossMonster(hp, hpMax, name, atk, def, mercy_obj)
    + nbActs() : int
    + getCategory() : string
}

Entity <|-- Player
Entity <|-- Monster
Monster <|-- NormalMonster
Monster <|-- MiniBossMonster
Monster <|-- BossMonster

' ─── Item ────────────────────────────────────────────────────────────────────

class Item {
    - name : string
    - type : ItemType
    - value : int
    - quantity : int
    - on_player : bool
    --
    + Item(name: string, type: ItemType, value: int, quantity: int, on_player: bool)
    + apply(p: Player&, m: Monster&) : void
    + getName() : string
    + getType() : ItemType
    + getValue() : int
    + getQuantity() : int
    + decrement() : void
}

Item --> ItemType

' ─── ActAction ───────────────────────────────────────────────────────────────

class ActAction {
    - id : string
    - text : string
    - mercyValue : int
    --
    + ActAction(id: string, text: string, mercyValue: int)
    + execute(m: Monster&) : void
    + getText() : string
}

' ─── BestiaryEntry ───────────────────────────────────────────────────────────

class BestiaryEntry {
    - id_bestiary : int
    - fightResult : FightResult
    - best_monster : Monster*
    --
    + BestiaryEntry(id: int, result: FightResult, monster: Monster*)
    + display() : void
    + getResult() : string
}

BestiaryEntry --> FightResult
BestiaryEntry --> Monster

' ─── Game ────────────────────────────────────────────────────────────────────

class Game {
    - player : Player
    - monsters : vector<Monster*>
    - bestiary : vector<BestiaryEntry>
    - {static} WIN_CONDITION : int = 10
    --
    + Game()
    + ~Game()
    + run() : void
    + showMenu() : void
    + loadItems(path: string) : void
    + loadMonsters(path: string) : void
    + startCombat() : void
    + showBestiary() : void
    + showStats() : void
    + showItems() : void
    + showEnding() : void
}

Game *-- Player
Game *-- "0..*" Monster
Game *-- "0..*" BestiaryEntry
Player *-- "0..*" Item
ActAction --> Monster

@enduml
